Implement generator Service with persistence

--- a/generator-service/pom.xml
+++ b/generator-service/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example.numberOfIslands</groupId>
-    <artifactId>generator-service</artifactId>
+    <artifactId>generatorService-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>generator-service</name>
+    <name>generatorService-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -21,7 +21,12 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
