Implement island calculation function & tests

--- a/solver-service/pom.xml
+++ b/solver-service/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example.numberOfIslands</groupId>
-    <artifactId>generator-service</artifactId>
+    <artifactId>solver-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>generator-service</name>
+    <name>solver-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -24,20 +24,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
