--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,19 @@ services:
       POSTGRES_PASSWORD: dbpass
     ports:
       - 5432:5432
+  zookeeper:
+    image: wurstmeister/zookeeper:3.4.6
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:2.12-2.1.0
+    ports:
+      - 9092:9092
+    links:
+      - zookeeper
+    environment:
+      HOSTNAME_COMMAND: "route -n | awk '/UG[ \t]/{print $$2}'"
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "Kafka_Example:1:1"
+
