--- a/generator-service/src/main/resources/application.properties
+++ b/generator-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#server.port=9090
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/islands
 spring.datasource.username=dbuser
@@ -7,3 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=Kafka_Example
+spring.kafka.producer.properties.spring.json.add.type.headers=false
